# seekfind

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  install-enterprise.bat  install.bat  install.sh  pyproject.toml
.claude/skills/: karpathy-guidelines.md
.github/workflows/: ci.yml
backend/: Dockerfile  agent.py  agent_engine.py  app.py  config.py  entrypoint.sh  requirements.txt  schemas.py
backend/agent/: __init__.py  graph.py  state.py  supervisor.py
backend/browser/: __init__.py  controller.py
backend/core/: __init__.py  cache.py  degradation.py  language.py  logging_config.py  metrics.py  observability.py  security.py
backend/enterprise/: __init__.py  llm_manager.py
backend/indexer/: __init__.py  build_index.py  cli.py  crawler.py  fingerprints.py  scrapling_fetcher.py
backend/mcp/: __init__.py  __main__.py  server.py
backend/memory/: __init__.py  extractors.py  fingerprint_storage.py  long_term.py  persistent_memory.py  short_term.py  types.py  vector_store.py
backend/services/: __init__.py  agent_service.py  (+2 more)
docs/: Agent核心部件完整性自检报告.md  EverOS记忆持久化方案.md  Scrapling内核学习与强化方案.md  Sprint5-Scrapling强化实施计划.md  Sprint6-新功能开发计划.md  agent-browser分析与能力获取.md  企业版部署指南.md  优化计划书.md  待完成任务.md  求问-技术栈与任务拆解.md  求问项目提升计划书.md  浏览器兼容性方案.md  统一设计文档.md  设计理念.md  项目业务完成度逐项排查.md  项目完成度与竞品分析漏洞排查.md  项目完成度与部署测试分析.md  项目完成度总览.md  项目完整改进计划.md  高级工程师改进计划.md
extension/: manifest.chrome.json  manifest.edge.json  manifest.firefox.json  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.content.config.ts  vite.content.single.config.ts
(+109 files in other folders)
